--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 						<h6>LTE eRAN13.1 Interoperability</h6>
 				</li>
 				<li>
-						<img src="cert/VoLTE.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
+						<img src="Cert/VoLTE.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
 				  <h6> VoLTE Technical Training (WN Specialty) <br>
 				  </h6>
 				</li>
 				<li>
-						<img src="cert/NB-IoT.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
+						<img src="Cert/NB-IoT.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
 				  <h6>NB-IoT Planning and Deployment</h6>
 				</li>
 			  <li>
@@ -259,7 +259,7 @@
 					  </h6>
 				</li>
 				<li>														   				
-						<img src="cert/HCNP.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
+						<img src="Cert/HCNP.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
 						<h6> HCNP (Huawei Certified Network Professional<br>
 						</h6>
 					</a>
