--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
 	</header>
 	<div class="container">
 		<div style="display:inline-block;">
-			<h1>Social Links</h1>
+		  <h1>Social Links</h1>
 			<ul class="socialLinks">
 				<li>
 					<a href="https://www.linkedin.com/in/mohsen-alihosseini" target="_blank">
 						<img src="image/linkedin.png"/>
 						<span>LinkedIn</span>
+					</a>
+				</li>
+								<li>
+					<a href="https://stackoverflow.com/users/3103913/mohsen" target="_blank">
+						<img src="image/stackoverflow.png"/>
+						<span>Stackoverflow</span>
 					</a>
 				</li>
 				<li>
@@ -268,7 +274,7 @@
 				</li>
 				<li>														   				
 						<img src="Cert/DeepLearning.jpg" class="w3-round" style="width:290px; height:190px"; border:white solid 2px;" />
-						<h6>Deep Learning A-Z™ Hands-On Artificial Neural Networks </h6>
+						<h6>Deep Learning A-Z™ Hands-On Artificial Neural Networks) </h6>
 						</a>
 				</li>
 				<li>
