--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a class="navbar-brand" href="/">My Portfolio</a>
                 <ul class="navbar-nav flex-grow-1">
 					<li class="nav-item">
-						<a class="nav-link text-light" href="https://github.com/***">
+						<a class="nav-link text-light" href="https://github.com/mohsen-alihosseini" target="_blank" >
 							<img src="image/github.png" height="20" class="align-top" />
 							My GitHub
 						</a>
@@ -41,10 +41,10 @@
 		<div style="width:100%; position:relative;">
 			<img src="image/header2.png" style="width:100%; position:absolute; z-index:1; left:0; top:0; -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.1))); mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.1));"/>
 			<div class="text-center" style="position:absolute; left:0; top:0; width:fit-content; z-index:2; margin-left:120px; margin-top:40px;">
-				<img src="image/me.jpg" class="rounded-circle m-2" style="width:190px; border:white solid 2px;" />
+				<img src="imag/me.png" class="rounded-circle m-2" style="width:190px; border:white solid 2px;" />
 			  <h3>Mohsen Alihosseini</h3>
 				<h5>Python Developer and Telecommunication Engineer</h5>
-			</div>
+		  </div>
 		</div>
 	</header>
 	<div class="container">
